# unit_test

gtest_mockcpp/: CMakeLists.txt  build.sh  main.cpp  makefile
gtest_mockcpp/items/AccountMangerTest/: CMakeLists.txt  Makefile
gtest_mockcpp/items/AccountMangerTest/include/: Account.h  AccountHelper.h  AccountManager.h  AccountService.h  MockAccountManager.h
gtest_mockcpp/items/AccountMangerTest/source/: AccountHelper.cpp  AccountService.cpp  test.cpp
gtest_mockcpp/items/GtestLearn/: CMakeLists.txt  main.c
gtest_mockcpp/items/GtestLearn/include/: A.h  ex_func.h  func.h
gtest_mockcpp/items/GtestLearn/source/: A.cpp  ex_func.c  func.c
gtest_mockcpp/items/mygtest/: build.sh  gtest_install.sh  makefile  test  test.cpp
gtest_mockcpp/items/mygtest/make_sample/: func.cpp  func.h  make_lib  makefile  makefile1
gtest_mockcpp/items/simpleTest/include/: add.h  addupto.h  divide.h
gtest_mockcpp/items/simpleTest/source/: add.cpp  addupto.cpp  divide.cpp  testFixture.cpp
gtest_mockcpp/source/: A_test.cpp  gmock_test.cpp  gtest_ut.cpp
gtest_mockcpp/source/untest/: key_check.cpp  key_spy.cpp  macro_test_p.cpp
gtest_mockcpp/stubs/: my_stubs.c
